--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@material-ui/core": "^4.11.4",
+    "@material-ui/icons": "^4.11.2",
     "expo": "~41.0.1",
     "expo-google-app-auth": "^8.1.7",
     "expo-status-bar": "~1.0.4",
